--- a/Unity3D-GameDev/index.html
+++ b/Unity3D-GameDev/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Unity3D-GameDev.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Unity3D-GameDev.data.gz",
-        frameworkUrl: buildUrl + "/Unity3D-GameDev.framework.js.gz",
-        codeUrl: buildUrl + "/Unity3D-GameDev.wasm.gz",
+        dataUrl: buildUrl + "/Unity3D-GameDev.data",
+        frameworkUrl: buildUrl + "/Unity3D-GameDev.framework.js",
+        codeUrl: buildUrl + "/Unity3D-GameDev.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Prototype",
