--- a/Unity3D-GameDev/index.html
+++ b/Unity3D-GameDev/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Prototype</title>
+    <title>Unity WebGL Player | FinalProject</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Prototype</div>
+        <div id="unity-build-title">FinalProject</div>
       </div>
     </div>
     <script>
@@ -62,8 +62,8 @@
         frameworkUrl: buildUrl + "/Unity3D-GameDev.framework.js",
         codeUrl: buildUrl + "/Unity3D-GameDev.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Prototype",
+        companyName: "QMUL",
+        productName: "FinalProject",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
